// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/Login Login renders correctly when logged in 1`] = `null`;

exports[`pages/Login Login renders correctly when logged out 1`] = `<div />`;

exports[`pages/Login mapStateToProps should return logged in if logged in 1`] = `
Object {
  "loading": false,
  "redirectToReferrer": true,
}
`;

exports[`pages/Login mapStateToProps should return not logged in if logged out 1`] = `
Object {
  "loading": false,
  "redirectToReferrer": false,
}
`;
